--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 04:05:25 2018</p>
+         Last Run: Mon Jul 23 05:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -38,27 +38,27 @@
                         <td>1</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>51</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>16</td>
+                        <td>15</td>
                         <td>57</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>62</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>17</td>
-                        <td>67</td>
+                        <td>15</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
@@ -171,8 +171,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "8",
-                 "16",
-                 "17"
+                 "15",
+                 "15"
                ]
              },
              {
@@ -182,7 +182,7 @@
                "data":[
                  "57",
                  "57",
-                 "67"
+                 "65"
                ]
              },
              {
@@ -190,8 +190,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "51",
-                 "62",
+                 "49",
+                 "61",
                  "57"
                ]
              }
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 04:05:25 2018</p>
+         Last Run: Mon Jul 23 05:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -234,11 +234,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>55</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -250,7 +250,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>45</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -262,31 +262,31 @@
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>22</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>2</td>
-                        <td>60</td>
+                        <td>3</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>30</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>17</td>
+                        <td>20</td>
                         <td>69</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SE</td>
-                        <td>28</td>
+                        <td>ESE</td>
+                        <td>30</td>
                      </tr>
                   </tbody>
                </table>
@@ -405,8 +405,8 @@
                  "15",
                  "15",
                  "0",
-                 "2",
-                 "17"
+                 "3",
+                 "20"
                ]
              },
              {
@@ -414,10 +414,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "45",
+                 "44",
                  "47",
                  "50",
-                 "60",
+                 "59",
                  "69"
                ]
              },
@@ -426,11 +426,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
-                 "45",
-                 "22",
-                 "30",
-                 "28"
+                 "53",
+                 "43",
+                 "19",
+                 "29",
+                 "30"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 04:05:25 2018</p>
+         Last Run: Mon Jul 23 05:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -472,7 +472,7 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>37</td>
                         <td>4</td>
                         <td>10</td>
                         <td>NW</td>
@@ -484,7 +484,7 @@
                         <td>25</td>
                         <td>25</td>
                         <td>15</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>5</td>
                         <td>10</td>
                         <td>NW</td>
@@ -517,8 +517,8 @@
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>15</td>
                         <td>24</td>
                         <td>6</td>
@@ -574,7 +574,7 @@
                  "25",
                  "26",
                  "26",
-                 "27"
+                 "26"
                ]
              },
              {
@@ -587,7 +587,7 @@
                  "25",
                  "26",
                  "26",
-                 "27"
+                 "26"
                ]
              }
            ]
@@ -652,8 +652,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "38",
-                 "31",
+                 "37",
+                 "30",
                  "27",
                  "25",
                  "24"
