--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 05:05:08 2018</p>
+         Last Run: Mon Jul 23 06:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>8</td>
-                        <td>57</td>
+                        <td>14</td>
+                        <td>58</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>49</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>15</td>
-                        <td>57</td>
+                        <td>18</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>61</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>57</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,8 +170,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "8",
-                 "15",
+                 "14",
+                 "18",
                  "15"
                ]
              },
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "57",
-                 "65"
+                 "58",
+                 "58",
+                 "66"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "49",
-                 "61",
-                 "57"
+                 "68",
+                 "71",
+                 "66"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 05:05:08 2018</p>
+         Last Run: Mon Jul 23 06:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -234,11 +234,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>53</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -246,47 +246,47 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>43</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>19</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>3</td>
+                        <td>30</td>
                         <td>59</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>29</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>20</td>
+                        <td>40</td>
                         <td>69</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>ESE</td>
-                        <td>30</td>
+                        <td>SE</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -405,8 +405,8 @@
                  "15",
                  "15",
                  "0",
-                 "3",
-                 "20"
+                 "30",
+                 "40"
                ]
              },
              {
@@ -414,9 +414,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "47",
-                 "50",
+                 "45",
+                 "48",
+                 "51",
                  "59",
                  "69"
                ]
@@ -426,11 +426,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "53",
-                 "43",
-                 "19",
-                 "29",
-                 "30"
+                 "55",
+                 "54",
+                 "32",
+                 "38",
+                 "50"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 05:05:08 2018</p>
+         Last Run: Mon Jul 23 06:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -484,7 +484,7 @@
                         <td>25</td>
                         <td>25</td>
                         <td>15</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>5</td>
                         <td>10</td>
                         <td>NW</td>
@@ -653,7 +653,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "37",
-                 "30",
+                 "31",
                  "27",
                  "25",
                  "24"
