--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 06:05:03 2018</p>
+         Last Run: Mon Jul 23 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -34,23 +34,23 @@
                         <td>17</td>
                         <td>17</td>
                         <td>14</td>
-                        <td>58</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>68</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>18</td>
-                        <td>58</td>
+                        <td>19</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>71</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -171,7 +171,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "14",
-                 "18",
+                 "19",
                  "15"
                ]
              },
@@ -180,8 +180,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
-                 "58",
+                 "57",
+                 "57",
                  "66"
                ]
              },
@@ -190,8 +190,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "68",
-                 "71",
+                 "69",
+                 "73",
                  "66"
                ]
              }
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 06:05:03 2018</p>
+         Last Run: Mon Jul 23 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -250,7 +250,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>54</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -262,30 +262,30 @@
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>32</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>30</td>
+                        <td>32</td>
                         <td>59</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>38</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>40</td>
+                        <td>41</td>
                         <td>69</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SE</td>
+                        <td>ESE</td>
                         <td>50</td>
                      </tr>
                   </tbody>
@@ -405,8 +405,8 @@
                  "15",
                  "15",
                  "0",
-                 "30",
-                 "40"
+                 "32",
+                 "41"
                ]
              },
              {
@@ -427,9 +427,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "55",
-                 "54",
-                 "32",
-                 "38",
+                 "53",
+                 "33",
+                 "39",
                  "50"
                ]
              }
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 06:05:03 2018</p>
+         Last Run: Mon Jul 23 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -474,7 +474,7 @@
                         <td>0</td>
                         <td>37</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NW</td>
                         <td>1</td>
                      </tr>
@@ -484,9 +484,9 @@
                         <td>25</td>
                         <td>25</td>
                         <td>15</td>
-                        <td>31</td>
+                        <td>30</td>
                         <td>5</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NW</td>
                         <td>31</td>
                      </tr>
@@ -496,9 +496,9 @@
                         <td>26</td>
                         <td>26</td>
                         <td>15</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NW</td>
                         <td>31</td>
                      </tr>
@@ -510,21 +510,21 @@
                         <td>15</td>
                         <td>25</td>
                         <td>7</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
-                        <td>31</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>27</td>
+                        <td>27</td>
                         <td>15</td>
                         <td>24</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
-                        <td>32</td>
+                        <td>33</td>
                      </tr>
                   </tbody>
                </table>
@@ -574,7 +574,7 @@
                  "25",
                  "26",
                  "26",
-                 "26"
+                 "27"
                ]
              },
              {
@@ -587,7 +587,7 @@
                  "25",
                  "26",
                  "26",
-                 "26"
+                 "27"
                ]
              }
            ]
@@ -653,8 +653,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "37",
-                 "31",
-                 "27",
+                 "30",
+                 "26",
                  "25",
                  "24"
                ]
@@ -667,8 +667,8 @@
                  "1",
                  "31",
                  "31",
-                 "31",
-                 "32"
+                 "32",
+                 "33"
                ]
              }
            ]
