--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 07:05:03 2018</p>
+         Last Run: Mon Jul 23 08:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,24 +33,24 @@
                         <td>Mostly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>14</td>
-                        <td>57</td>
+                        <td>13</td>
+                        <td>58</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>NNE</td>
                         <td>69</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>19</td>
-                        <td>57</td>
+                        <td>33</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>73</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>15</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>66</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
@@ -170,8 +170,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "14",
-                 "19",
+                 "13",
+                 "33",
                  "15"
                ]
              },
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "57",
-                 "66"
+                 "58",
+                 "59",
+                 "68"
                ]
              },
              {
@@ -191,7 +191,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "69",
-                 "73",
+                 "61",
                  "66"
                ]
              }
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 07:05:03 2018</p>
+         Last Run: Mon Jul 23 08:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -238,7 +238,7 @@
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>55</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -250,19 +250,19 @@
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>53</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>0</td>
+                        <td>4</td>
                         <td>51</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>33</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -270,22 +270,22 @@
                         <td>17</td>
                         <td>17</td>
                         <td>32</td>
-                        <td>59</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
-                        <td>39</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>41</td>
+                        <td>40</td>
                         <td>69</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>ESE</td>
+                        <td>SE</td>
                         <td>50</td>
                      </tr>
                   </tbody>
@@ -404,9 +404,9 @@
                "data":[
                  "15",
                  "15",
-                 "0",
+                 "4",
                  "32",
-                 "41"
+                 "40"
                ]
              },
              {
@@ -417,7 +417,7 @@
                  "45",
                  "48",
                  "51",
-                 "59",
+                 "60",
                  "69"
                ]
              },
@@ -426,10 +426,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "56",
                  "55",
-                 "53",
-                 "33",
-                 "39",
+                 "34",
+                 "40",
                  "50"
                ]
              }
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 23 07:05:03 2018</p>
+         Last Run: Mon Jul 23 08:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -474,9 +474,9 @@
                         <td>0</td>
                         <td>37</td>
                         <td>4</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NW</td>
-                        <td>1</td>
+                        <td>0</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -486,9 +486,9 @@
                         <td>15</td>
                         <td>30</td>
                         <td>5</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NW</td>
-                        <td>31</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -498,7 +498,7 @@
                         <td>15</td>
                         <td>26</td>
                         <td>6</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NW</td>
                         <td>31</td>
                      </tr>
@@ -510,19 +510,19 @@
                         <td>15</td>
                         <td>25</td>
                         <td>7</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NNW</td>
                         <td>32</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>15</td>
                         <td>24</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NNW</td>
                         <td>33</td>
                      </tr>
@@ -574,7 +574,7 @@
                  "25",
                  "26",
                  "26",
-                 "27"
+                 "26"
                ]
              },
              {
@@ -587,7 +587,7 @@
                  "25",
                  "26",
                  "26",
-                 "27"
+                 "26"
                ]
              }
            ]
@@ -664,8 +664,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "1",
-                 "31",
+                 "0",
+                 "30",
                  "31",
                  "32",
                  "33"
